fixed alignment with blur

--- a/controls.css
+++ b/controls.css
@@ -145,7 +145,7 @@ label {
 }
 
 #Emily-rightQuad .checkbox-blur {
-    top: 20%;
+    top: 42%;
     /* left: 77%; */
     right: 40rem;
     width: 3rem;
